Squashed commit of the following:
commit 6d953d55695bfc6425803cdeb05faab1cad5a3e7
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 17:20:52 2024 +0000

    login view, todo

commit 9e3487e045e47b7d787850f60ba2381cf73b1a2a
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 17:20:37 2024 +0000

    mínima funcionalidad de mostrar beacons

commit 4659a0e58058f7597d4e74e960f42c596c3304bb
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 10:03:55 2024 +0000

    Test code to post to server

commit d6e5372782ef6b3fa6ec792a95ddd0fab2b583f1
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 08:17:20 2024 +0000

    update deps

commit 10ff3cb8615f4d733c91dedd4eaa531680990d4f
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 08:17:12 2024 +0000

    Fix DeprecationWarning

commit a63dddc4b00a6d3f98c6b9c7163778c647fe279b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 21 08:51:02 2024 +0000

    use singleton of beaconRefApp

commit 6f75a279795736d33cbe7106bdecc70009811311
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 21 08:50:22 2024 +0000

    unnecessary import

commit 8d44ad31299051ffa021bdbeeba8a217d64ad910
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 21 08:50:06 2024 +0000

    rm basic logo

commit cb672e8668e208ca041e31a8278904cf282c9797
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Nov 20 17:24:01 2024 +0000

    Add config for developing on debug

commit 911a3a755043e2a3947c675804aeb9f2427fd5f3
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Nov 20 14:09:52 2024 +0000

    add debug flag via BuildConfig

commit 745505091298d9d3f44eba2e3769bbb1949af760
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed N

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            // BuildConfigField for production server URL
+            buildConfigField "String", "SERVER_URL", "\"https://vps247.cesvima.upm.es/\""
+        }
+        debug {
+            // BuildConfigField for debug server URL
+            buildConfigField "String", "SERVER_URL", "\"http://192.168.1.42:5000\""
+            // BuildConfigField for in-code debug flag
+            buildConfigField "Boolean", "DEBUG", "true"
         }
     }
     compileOptions {
@@ -34,6 +42,8 @@ android {
 
     buildFeatures{
         compose = true
+        buildConfig = true
+        viewBinding true
     }
 
     composeOptions{
@@ -54,11 +64,12 @@ dependencies {
     implementation 'org.altbeacon:android-beacon-library:2.20.7'
     implementation 'com.google.android.gms:play-services-location:21.3.0'
     implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.8.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
+    implementation 'androidx.annotation:annotation:1.9.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
@@ -73,7 +84,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.11.0'
 
     //Compose
-    implementation (platform("androidx.compose:compose-bom:2024.10.01"))
+    implementation (platform("androidx.compose:compose-bom:2024.11.00"))
     implementation("androidx.compose.ui:ui")
     implementation("androidx.compose.material:material")
     implementation("androidx.compose.runtime:runtime")
