Squashed commit of the following:
commit a4c660377d5a51cf7efcec1e7673c782be797331
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Dec 3 23:38:51 2024 +0000

    Update strings.xml

commit 727e95dc895f505b297da968116a5f8b3f266c8b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 29 12:17:19 2024 +0000

    service (to be tested)

commit 5861111482f1ea58ea4f7ada6f1a5755a90e0583
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 29 11:19:15 2024 +0000

    rename collection of beacons

commit bfa819c0c24124d40b7c7b5d80265148b3d62751
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 29 11:17:30 2024 +0000

    beautify palette

commit a6d6f112284cc39fc4702863b9fd03c9c499e966
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 29 11:14:24 2024 +0000

    strings for previous commit

commit 322f000afff517a8526d774b68c695d09b4aa4c8
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 29 10:07:37 2024 +0000

    more mssages to home ui

commit 72faec9f15075f09560c75c7e1df3d03e3668651
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 28 13:09:33 2024 +0000

    Beta v1

    Add bottom appbar to:
    - Export file with data
    - Remove all beacons
    Implement:
    - Remove a beacon button

commit a3a5135b939ee1d844fe41813b2952300d0b1bcf
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 28 10:55:46 2024 +0000

    bottom appbar for home view

commit df769ce01890a8605b8aa23f241d0b18a7132d2d
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 28 08:58:40 2024 +0000

    Update SessionWriterUT.kt

commit e3287c2ad76e6745be0bf8a013e6693481bb6a30
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Nov 27 22:53:36 2024 +0000

    Delete ExampleUnitTest.kt

commit 2cc37c3d45d530a6c9

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -25,7 +26,7 @@
         android:theme="@style/Theme.BeaconBLE"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.ActMain"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,9 +34,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.beaconble.BeaconScanPermissionsActivity"
+            android:name="com.example.beaconble.ui.ActPermissions"
             android:exported="false">
         </activity>
+        <service
+            android:name=".service.ForegroundBeaconScanService"
+            android:exported="false"
+            android:foregroundServiceType="location"
+            android:permission="android.permission.FOREGROUND_SERVICE">
+        </service>
 
     </application>
 
