--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "21"
     }
 
     buildFeatures{
@@ -51,7 +51,7 @@ android {
     }
 
     kotlin{
-        jvmToolchain(8)
+        jvmToolchain(21)
     }
 }
 
