Squashed commit of the following:
commit b874ad351b276cfe3b6df39699f65dde5c0b3b13
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 12:03:11 2024 +0000

    validation of register and login fields, formatting

commit 29aa9bc32c409cc61e9b7697d821d5560108ac6b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 10:08:37 2024 +0000

    update app name

commit d1f7cf278e1711e438ccc40f1f781fe8aef30432
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 10:08:31 2024 +0000

    format and cleanup code

commit 068d29aac31edde15e6807e72f013f7abeb60652
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 10:08:13 2024 +0000

    update notifications strings

commit 266165f7c75d42e6f68f4a19946eb44bac567149
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 20:19:38 2024 +0000

    fcking fix all

commit 3e6ff1bf5ebc4972c00617369dd288b38cc3adb9
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 15:55:48 2024 +0000

    fix file creator to comply with server

commit bb161598fe63f25e9a7009c979e27ecc99c3fcd5
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 12:55:33 2024 +0000

    add upload method

commit d4185942aa7959ca8e60ecc108a289bdc305f079
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 12:55:16 2024 +0000

    session writer -> subclass a version writer // add unit test

commit 3c81aa236f5aebcc4f0a1a67802596e91ab2f19b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Dec 11 22:54:17 2024 +0000

    add "ongoing meas session" notification

commit 2752364d34e1fab74eda03d3113ec4e53563f1b0
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Dec 11 22:54:00 2024 +0000

    fix user account persistence

commit 2a2b4f1547d1852b3e571f62b1fab4e98ae9a5cf
Autho

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.plugin.compose'
 }
 
 android {
@@ -41,13 +40,8 @@ android {
     }
 
     buildFeatures{
-        compose = true
         buildConfig = true
         viewBinding true
-    }
-
-    composeOptions{
-        kotlinCompilerExtensionVersion = "1.4.3"
     }
 
     kotlin{
@@ -83,19 +77,14 @@ dependencies {
     //JSON
     implementation 'com.google.code.gson:gson:2.11.0'
 
-    //Compose
-    implementation (platform("androidx.compose:compose-bom:2024.11.00"))
-    implementation("androidx.compose.ui:ui")
-    implementation("androidx.compose.material:material")
-    implementation("androidx.compose.runtime:runtime")
-    implementation("androidx.activity:activity-compose:1.9.3")
-    implementation("androidx.compose.ui:ui-graphics")
-    implementation("androidx.compose.ui:ui-tooling-preview")
-
     //Corrutinas
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.9.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0'
 
-    implementation("androidx.preference:preference-ktx:1.2.1")
-    implementation("androidx.fragment:fragment-ktx:1.8.5")
+    //Misc (TODO: tidy up)
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.fragment:fragment-ktx:1.8.5'
+
+    //Security
+    implementation 'com.lambdapioneer.argon2kt:argon2kt:1.6.0'
 }
