--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -34,10 +35,11 @@
             android:name="com.example.beaconble.ui.ActPermissions"
             android:exported="false"/>
         <service
-            android:name=".service.ForegroundBeaconScanService"
+            android:name="com.example.beaconble.service.ForegroundBeaconScanService"
             android:exported="false"
-            android:foregroundServiceType="location"
-            android:permission="android.permission.FOREGROUND_SERVICE"/>
+            android:foregroundServiceType="location|connectedDevice"
+            android:permission="android.permission.FOREGROUND_SERVICE"
+            tools:node="merge" />
         <receiver
             android:name=".broadcastReceivers.StopBroadcastReceiver"
             android:exported="false">
