Squashed commit of the following:
commit bbc772d83bf3db6e991dc4b6d96f15d4bc143af5
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Feb 21 11:02:50 2025 +0000

    refactor / optim start

commit 17f42a841dc40de35753df1869ae10afc8003507
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Feb 21 10:32:46 2025 +0000

    avoid uploading VIPV_bodies

commit 289a8c28f258457453a2cbd7fc4979466ffccd8f
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 18:10:05 2025 +0000

    linter

commit 33a4b486f40aa727d996dd9c0807950f79192577
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 18:02:05 2025 +0000

    linter

commit ac6382d5eb533ee01c89a5736b5d20276be1de9b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 18:01:58 2025 +0000

    fix tests

commit 6b460a85db0be8d122203f88ad2da27ffc85b091
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 17:56:37 2025 +0000

    linter

commit 6604f332370c8531be83c0998875cee81022a0c1
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 17:49:46 2025 +0000

    rename app package to es.upm.ies.vipvble

commit 44c1d36c759032487454acb8b22ecf74cd2af2fa
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 12:19:24 2025 +0000

    auto formattign

commit 1008c82abcfaed4914a98e07f38381209fbbc005
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 12:12:42 2025 +0000

    Update AndroidManifest.xml

commit 1075510ce81cedc059af45db48a3521d1b071fe2
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 12:01:11 2025 +0000

    fix sintax issues and some other minor things

commit fb06e11513d3dd19873cc38ad8598c486c43c1da
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Tue Feb 18 12:00:47 2025 +0000

    tweak 

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,15 @@ plugins {
 }
 
 android {
-    namespace 'com.example.beaconble'
+    namespace 'es.upm.ies.vipvble'
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.example.beaconble"
+        applicationId 'es.upm.ies.vipvble'
         minSdk 26
         targetSdk 35
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -51,43 +51,47 @@ android {
 }
 
 dependencies {
-
+    // General
     implementation 'androidx.core:core-ktx:1.15.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.work:work-runtime-ktx:2.10.0'
+    implementation 'androidx.annotation:annotation:1.9.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Connectivity
+    implementation 'org.altbeacon:android-beacon-library:2.21.0-beta5'
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
+
+    // UI
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
-    implementation 'org.altbeacon:android-beacon-library:2.20.7'
-    implementation 'com.google.android.gms:play-services-location:21.3.0'
     implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.8.5'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.fragment:fragment-ktx:1.8.6'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.7'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.7'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
-    implementation 'androidx.annotation:annotation:1.9.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
-    //Retrofit
+    // HTTP & API
     implementation 'com.squareup.retrofit2:retrofit:2.11.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
 
-    //JSON
+    // Types
     implementation 'com.google.code.gson:gson:2.11.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
 
-    //Corrutinas
+    // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.9.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0'
 
-    //Misc (TODO: tidy up)
-    implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation 'androidx.fragment:fragment-ktx:1.8.5'
-    implementation 'org.apache.commons:commons-collections4:4.4'
-
-    //Security
+    // Security
     implementation 'com.lambdapioneer.argon2kt:argon2kt:1.6.0'
+
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.robolectric:robolectric:4.10.3'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
