--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'es.upm.ies.vipvble'
+    namespace 'es.upm.ies.surco'
     compileSdk 35
 
     defaultConfig {
-        applicationId 'es.upm.ies.vipvble'
+        applicationId 'es.upm.ies.surco'
         minSdk 26
         targetSdk 35
         versionCode 2
@@ -22,7 +22,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             // BuildConfigField for production server URL
-            buildConfigField "String", "SERVER_URL", "\"https://vps247.cesvima.upm.es/\""
+            buildConfigField "String", "SERVER_URL", "\"https://surco.ies.upm.es/\""
             signingConfig signingConfigs.debug
         }
         debug {
