UI improvements, about, etc

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String", "GITHUB_URL", "\"https://github.com/isi-ies-group/VIPV-Data-Crowdsourcing-Client\"")
+        buildConfigField("String", "CONTACT_EMAIL", "\"info@ies.upm.es\"")
     }
 
     buildTypes {
