--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,13 @@ android {
         applicationId = 'es.upm.ies.surco'
         minSdk = 26
         targetSdk = 36
-        versionCode = 5
-        versionName = "0.2.0"
+        versionCode = 6
+        versionName = "0.2.1"
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField("String", "GITHUB_URL", "\"https://github.com/isi-ies-group/VIPV-surCO-Client\"")
-        buildConfigField("String", "CONTACT_EMAIL", "\"info@ies.upm.es\"")
+        buildConfigField("String", "CONTACT_EMAIL", "\"ies@upm.es\"")
 
         resConfigs "en", "es"
     }
