[TESTS / CI/CD] FIx

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,4 +36,4 @@ jobs:
 
       - name: Run Tests
         run: |
-          ./gradlew --no-daemon test
+          ./gradlew --no-daemon --warning-mode all test
