--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/Theme.surCO"
-        tools:targetApi="31">
+        android:theme="@style/Theme.surCO">
         <activity
             android:name=".ui.ActMain"
             android:exported="true">
@@ -54,10 +53,14 @@
                 android:name="longScanForcingEnabled"
                 android:value="true" />
         </service>
-        <service android:name="org.altbeacon.beacon.service.BeaconService"
+        <service
+            android:name="org.altbeacon.beacon.service.BeaconService"
             tools:node="replace">
-            <meta-data android:name="longScanForcingEnabled" android:value="true"/>
+            <meta-data
+                android:name="longScanForcingEnabled"
+                android:value="true" />
         </service>
+
         <receiver
             android:name="es.upm.ies.surco.broadcastReceivers.StopBroadcastReceiver"
             android:exported="false">
